--- a/.github/actions/dynamatrix/action.yml
+++ b/.github/actions/dynamatrix/action.yml
@@ -10,10 +10,8 @@ runs:
 
   steps:
     - run: |
-        printenv
-        pwd
-        ls -lR
-
         # FIXME: input sanity check to prevent shell injection
-        python3 matrix_yaml_to_json.py
+        python3 $GITHUB_ACTION_PATH/matrix_yaml_to_json.py << 'EOF'
+        ${{ inputs.matrixstr }}
+        EOF
       shell: sh
