--- a/.github/actions/dynamatrix/action.yml
+++ b/.github/actions/dynamatrix/action.yml
@@ -10,8 +10,9 @@ runs:
 
   steps:
     - run: |
+        echo '${{ inputs.matrixstr }}'
         # FIXME: input sanity check to prevent shell injection
         python3 $GITHUB_ACTION_PATH/matrix_yaml_to_json.py << EOF
         ${{ inputs.matrixstr }}
         EOF
-      shell: sh
+      shell: bash
