--- a/.github/workflows/dodynamic.yml
+++ b/.github/workflows/dodynamic.yml
@@ -1,112 +1,149 @@
 on:
-- push
+  push:
+  pull_request:
+    types: [ opened, synchronize, reopened ]
+
+env:
+  skip_ci_redundant_jobs: ${{ github.event_name == 'pull_request' }}
+  skip_slow_jobs: ${{ github.event_name == 'pull_request' }}
+  skip_self_hosted_runner_jobs: ${{ github.repository_owner != 'rolpdog' }}
+  skip_artifact_upload: ${{ github.event_name == 'pull_request' }}
+  # or maybe
+  # is_ci:
+  # self_hosted_available:
 
 jobs:
   make_matrix:
     runs-on: ubuntu-latest
-#    outputs:
-#      matrix: ${{ steps.make_matrix.outputs.matrix }}
+    outputs:
+      matrix_json: ${{ steps.make_matrix.outputs.matrix_json }}
     steps:
     - uses: actions/checkout@v4
     - name: make a matrix
+      id: make_matrix
       uses: ./.github/actions/dynamatrix
       with:
         matrixstr: |
           include:
             - spec: cp38-manylinux_x86_64
             - spec: cp39-manylinux_x86_64
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp310-manylinux_x86_64
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp311-manylinux_x86_64
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp312-manylinux_x86_64
     
             - spec: cp38-manylinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp39-manylinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp310-manylinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp311-manylinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp312-manylinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
     
             - spec: cp39-musllinux_x86_64
             - spec: cp310-musllinux_x86_64
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp311-musllinux_x86_64
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp312-musllinux_x86_64
     
             - spec: cp39-musllinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp310-musllinux_i686
+              omit: ${{ env.skip_ci_redundant_jobs }}
             - spec: cp311-musllinux_i686
             #- spec: cp312-musllinux_i686  # busted as of 9/22/23
     
             - spec: cp38-manylinux_aarch64
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_self_hosted_runner_jobs }}
 
             - spec: cp39-manylinux_aarch64
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_self_hosted_runner_jobs }}
 
             - spec: cp310-manylinux_aarch64
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_self_hosted_runner_jobs }}
 
             - spec: cp311-manylinux_aarch64
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_self_hosted_runner_jobs }}
 
             - spec: cp312-manylinux_aarch64
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_self_hosted_runner_jobs }}
     
             - spec: cp38-manylinux_ppc64le
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
           
             - spec: cp39-manylinux_ppc64le
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp310-manylinux_ppc64le
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp311-manylinux_ppc64le
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp312-manylinux_ppc64le
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
     
             - spec: cp38-manylinux_s390x
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp39-manylinux_s390x
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp310-manylinux_s390x
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp311-manylinux_s390x
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
 
             - spec: cp312-manylinux_s390x
               foreign_arch: true
               test_args: '{project}/src/c'
-              omit: ${{ github.repository_owner != 'rolpdog' }}
+              omit: ${{ env.skip_slow_jobs }}
+
+  use_matrix:
+    runs-on: ubuntu-latest
+    needs: make_matrix
+    strategy:
+      matrix: ${{ fromJSON(needs.make_matrix.outputs.matrix_json) }}
+    steps:
+    - name: debugstep
+      run: |
+        echo 'input matrix raw JSON is ${{ needs.make_matrix.outputs.matrix_json }}'
+        
+        echo 'running ${{ matrix.spec }} with test_args ${{ matrix.test_args || 'no args' }}'
+        echo "skipping artifact upload: ${{ env.skip_artifact_upload }}"
